# gdl90

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Package.swift  README.md  build.rs  gdl90.h  rustfmt.toml
.github/workflows/: swift-package.yml
examples/: ff_broadcast.rs  simple.rs
examples/common/: mod.rs
src/: error.rs  ffi.rs  lib.rs  main.rs
src/ffi/: bridge.rs  cxx.rs  gdl90.h  mod.rs  opaque.rs  swift.rs
src/message/: crc.rs  impl.rs  mod.rs  tests.rs
src/message_types/: custom.rs  foreflight_ahrs.rs  foreflight_broadcast.rs  foreflight_id.rs  heartbeat.rs  height_above_terrain.rs  initialization.rs  mod.rs  ownship_geometric_altitude.rs  uplink_data.rs
src/message_types/traffic_report/: address_type.rs  emergency_priority_code.rs  emitter_category.rs  impl.rs  miscellaneous_indicators.rs  mod.rs  nacp.rs  nic.rs  traffic_alert_status.rs
src/messages/: ahrs_message.rs  mod.rs  traffic_report.rs
src/util/: mod.rs  uom_utils.rs
